@@ -44,7 +44,7 @@
 		  </TMPL_LOOP>
 		    <tr>
 			  <th align='left' valign='top'>Field</th>
-			  <th align='left' valign='top'>Type</th>
+			  <th align='left' valign='top'><a href="../definitions.html#data_types">Type</a></th>
 			  <th align='left' valign='top'>Warn</th>
 			  <th align='left' valign='top'>Crit</th>
 			  <th>
